--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="37dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Titre"
         app:layout_constraintStart_toStartOf="@+id/editdescription"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +35,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="78dp"
         android:layout_marginEnd="46dp"
+        android:layout_marginBottom="452dp"
         android:text="valider"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editdescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editdescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
